[gd_scene load_steps=14 format=3 uid="uid://63bc66h4a8ng"]

[ext_resource type="Script" path="res://scripts/BossTemplate.gd" id="1_phb54"]
[ext_resource type="Texture2D" uid="uid://csxwduylakj2d" path="res://assets/enemies/masked orc/masked_orc_idle_anim_f0.png" id="2_jh0h5"]
[ext_resource type="Texture2D" uid="uid://8gocpc0f3eb2" path="res://assets/enemies/masked orc/masked_orc_idle_anim_f1.png" id="3_viql3"]
[ext_resource type="Texture2D" uid="uid://bg1e67i245ch0" path="res://assets/enemies/masked orc/masked_orc_idle_anim_f2.png" id="4_iitol"]
[ext_resource type="Texture2D" uid="uid://csoejtq328ouo" path="res://assets/enemies/masked orc/masked_orc_idle_anim_f3.png" id="5_rjj22"]
[ext_resource type="Texture2D" uid="uid://b3y5gi7rqejdn" path="res://assets/enemies/masked orc/masked_orc_run_anim_f0.png" id="6_wq6yc"]
[ext_resource type="Texture2D" uid="uid://dcxi6pso4x1me" path="res://assets/enemies/masked orc/masked_orc_run_anim_f1.png" id="7_4qr5u"]
[ext_resource type="Texture2D" uid="uid://dw88guocighrd" path="res://assets/enemies/masked orc/masked_orc_run_anim_f2.png" id="8_oo3py"]
[ext_resource type="Texture2D" uid="uid://blm1228cve4hd" path="res://assets/enemies/masked orc/masked_orc_run_anim_f3.png" id="9_7p2gc"]

[sub_resource type="SpriteFrames" id="SpriteFrames_xucp2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_jh0h5")
}, {
"duration": 1.0,
"texture": ExtResource("3_viql3")
}, {
"duration": 1.0,
"texture": ExtResource("4_iitol")
}, {
"duration": 1.0,
"texture": ExtResource("5_rjj22")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_wq6yc")
}, {
"duration": 1.0,
"texture": ExtResource("7_4qr5u")
}, {
"duration": 1.0,
"texture": ExtResource("8_oo3py")
}, {
"duration": 1.0,
"texture": ExtResource("9_7p2gc")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v2to5"]
size = Vector2(9.33333, 14.6667)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mklx4"]
size = Vector2(349, 196)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5c7gb"]
size = Vector2(10, 15.25)

[node name="MainBoss_N" type="CharacterBody2D"]
position = Vector2(459, -1751)
scale = Vector2(4, 4)
collision_layer = 4
collision_mask = 3
script = ExtResource("1_phb54")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_xucp2")
animation = &"run"
frame_progress = 0.51756

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 2.66667)
shape = SubResource("RectangleShape2D_v2to5")

[node name="WakeUpArea2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="WakeUpArea2D"]
position = Vector2(-107.75, 65.75)
shape = SubResource("RectangleShape2D_mklx4")

[node name="ContactArea2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ContactArea2D"]
position = Vector2(1, 2.625)
shape = SubResource("RectangleShape2D_5c7gb")

[node name="RetreatingTimer" type="Timer" parent="."]
one_shot = true

[node name="IntraClipTimer" type="Timer" parent="."]
one_shot = true

[node name="ReloadingClipTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="WakeUpArea2D" to="." method="_on_wake_up_area_2d_body_entered"]
[connection signal="body_entered" from="ContactArea2D" to="." method="_on_contact_area_2d_body_entered"]
[connection signal="timeout" from="RetreatingTimer" to="." method="_on_retreating_timer_timeout"]
[connection signal="timeout" from="IntraClipTimer" to="." method="_on_intra_clip_timer_timeout"]
[connection signal="timeout" from="ReloadingClipTimer" to="." method="_on_reloading_clip_timer_timeout"]
